fixed order overview in firefox
fixed unpaid cash orders not showing up
small text adjustments

--- a/app/assets/stylesheets/ticketing/orders.css.scss
+++ b/app/assets/stylesheets/ticketing/orders.css.scss
@@ -98,7 +98,11 @@ table.details {
 }
 
 .topTables {
-  overflow: visible;
+  &:after {
+    content:"";
+    display:table;
+    clear:both;
+  }
 
   > table {
     float: left;
@@ -575,9 +579,13 @@ table.details {
       
       .restaurants {
         margin-bottom: 20px;
-        
-        li {
-          list-style-type: none;
+
+        ul {
+          padding-left: 0;
+
+          li {
+            list-style-type: none;
+          }
         }
       }
     }
